--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -39,6 +39,63 @@ a.anchor {
     transform: translate(-50%, -50%);
 }
 
+/* TEMP POPUP */
+.tempPopup {
+    position: absolute;
+    z-index: 100;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #585858cc;
+}
+.tempPopupContainer {
+    width: 50%;
+    height: 300px;
+    border-radius: 25px;
+    background-color: #ffffffff;
+    box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.507);
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.tempPopupContainerX {
+    color: var(--black1);
+    font-size: 35px;
+    font-weight: 300;
+    position: absolute;
+    top: 15px;
+    right: 30px;
+}
+.tempPopupContainerX:hover {
+    color: var(--grey1);
+    cursor: pointer;
+}
+.tempPopupContainerTitle {
+    position: absolute;
+    top: 15px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 68%;
+    display: block;
+    text-align: center;
+    color: var(--black1);
+    font-size: 35px;
+    font-weight: 400;
+}
+.tempPopupContainerText {
+    position: relative;
+    top: 55%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 80%;
+    text-align: center;
+    color: var(--black1);
+    font-size: 30px;
+    font-weight: 300;
+}
+
 /* Navbar */
 .nav {
     position: sticky;
@@ -164,21 +221,91 @@ a.anchor {
     background: linear-gradient(#517481 0%, #1f3e4e 100%);
 }
 
+/* Home Landing */
+.homeLanding {
+    width: 80%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
 /* Logo Image */
 .logoImage {
+    grid-column: 1 / 2;
+    width: 100%;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 80%;
-    max-width: 600px;
     height: auto;
     animation: fadeIn linear 1s;
 }
 .logoImage svg {
     width: 100%;
+    max-width: 600px;
     height: auto;
     fill: #dbdbdb;
+    position: relative;
+    left: 50%;
+    transform: translate(-50%);
+}
+
+/* Home Landing Store */
+.homeLandingStore {
+    grid-column: 2 / 2;
+    width: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    animation: fadeIn linear 1s;
+}
+.homeLandingStoreDiv {
+    width: max-content;
+}
+.homeLandingStoreTitle {
+    display: block;
+    font-size: 45px;
+    font-weight: 400;
+    color: var(--white1);
+}
+.homeLandingStoreProductsDiv {
+    width: 300px;
+    margin: 0 auto;
+    text-align: center;
+}
+.homeLandingStoreProductsImg {
+    display: block;
+    width: 100%;
+    height: 300px;
+    background-color: #ffffff;
+    border-radius: 10px;
+    margin: 10px 0;
+}
+.homeLandingStoreProductsImg img {
+    width: 100%;
+    height: auto;
+}
+.homeLandingStoreProductsText {
+    width: 100%;
+    display: block;
+    margin-bottom: 50px;
+    color: var(--white1);
+    font-size: 25px;
+}
+.homeLandingStoreButton {
+    color: var(--red2);
+    background-color: var(--white1);
+    width: 100px;
+    border-radius: 25px;
+    padding: 20px 30px;
+    font-size: 30px;
+    font-weight: 300;
+    box-shadow: 2px 2px 5px 5px var(--grey1), 5px 5px 10px 0 var(--black1);
 }
 
 /* Landings */
@@ -574,6 +701,17 @@ a.anchor {
     }
     .contactLandingFormInput {
         text-align: center;
+    }
+    .tempPopupContainerX {
+        font-size: 35px;
+    }
+    .tempPopupContainerTitle {
+        font-size: 25px;
+        text-align: left;
+        margin-top: 5px;
+    }
+    .tempPopupContainerText {
+        font-size: 20px;
     }
 }
 @media screen and (min-width: 1001px) {
